<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bottom_sheet_update"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_fitness_center_black_24dp"
            android:text="@string/menu_update_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_edit"/>

        <TextView
            android:id="@+id/bottom_sheet_edit"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:text="@string/menu_edit_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_update"
            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_remove"/>

        <TextView
            android:id="@+id/bottom_sheet_remove"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_remove_circle_black_24dp"
            android:text="@string/menu_remove_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_edit" />

    </android.support.constraint.ConstraintLayout>
<!--

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom_sheet_update"
            style="@style/BottomSheetClickable">

            <ImageView
                android:id="@+id/weight_logo"
                style="@style/BottomSheetMenuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fitness_center_black_24dp" />

            <TextView
                android:id="@+id/update_weight_tv"
                style="@style/BottomSheetMenuTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_update_weight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weight_logo"
                app:layout_constraintTop_toTopOf="parent" />

&lt;!&ndash;            <TextView
                android:id="@+id/update_weight_tv"
                style="@style/BottomSheetMenuTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_fitness_center_black_24dp"
                android:drawablePadding="@dimen/padding_medium"
                android:text="@string/menu_update_weight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom_sheet_edit"
            style="@style/BottomSheetClickable">

            <ImageView
                android:id="@+id/edit_logo"
                style="@style/BottomSheetMenuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_black_24dp" />

            <TextView
                android:id="@+id/edit_exercise_tv"
                style="@style/BottomSheetMenuTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_edit_exercise"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom_sheet_remove"
            style="@style/BottomSheetClickable">

            <ImageView
                android:id="@+id/remove_logo"
                style="@style/BottomSheetMenuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_remove_circle_black_24dp" />

            <TextView
                android:id="@+id/remove_exercise_tv"
                style="@style/BottomSheetMenuTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_remove_exercise"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/remove_logo"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>-->
</layout>