...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_extra_small">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/exercise_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:tint="#FFFFFFFF"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
...
